--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
+    "event-stream": "^4.0.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "express-rate-limit": "^3.3.2",
